# ANNNI2

./: .gitignore  README.md  getdata.py  pyproject.toml  requirements.txt
dmrg/: README.md  getstates.py  pyproject.toml  study.sh
fakedata/14/: shapes_sites_ANNNI_L_14_h_0.50_kappa_0.50  tensor_sites_ANNNI_L_14_h_1.50_kappa_1.00
fakedata/16/: shapes_sites_ANNNI_L_16_h_0.50_kappa_0.50  tensor_sites_ANNNI_L_16_h_1.00_kappa_0.75
fakedata/18/: shapes_sites_ANNNI_L_18_h_1.33_kappa_0.00  tensor_sites_ANNNI_L_18_h_1.33_kappa_1.00
fakedata/20/: shapes_sites_ANNNI_L_20_h_0.00_kappa_1.00
notebooks/: 23-10-presentation.ipynb  ANNNIstates.py  best_contractions.ipynb  big_diagonalization.ipynb  inspect_data.ipynb  test.ipynb
slurm/: chi_aut.sh  diag.err  diag.out  fid.err  fid.out  fidelity.sh  psi_aut.sh  slurm.sh
src/: ANNNIgen.py  ANNNIstates.py  autoencoder.py  main.py  main_aut.py  mpsgen.py  plot.py  plot_aut.py  predict.py  predict_aut.py  qcnn.py  test.ipynb
src/ANNNI/: annni.py  autoencoder.py  general.py  hamiltonian.py  qcnn.py
src/ANNNI/scripts/: main.py  main_aut.py  plot.py  plot_aut.py  predict.py  predict_aut.py
src/ANNNI/scripts/dmrg/: getstates.py  getstates_diag.py  slurm.sh
